# ssi-cli

./: 1.trading.py  auto_trade.py  auto_trade_workflow.md  blabla.py  dashboard.py  dashboard_workflow.md  dat_lenh_phai_sinh.py  data_trade.txt  lenh_thoi_gian_thuc.py  pyproject.toml  requirements.txt  trading.py  trading_workflow.md
ssi/: config.py
ssi/data/: DataClient.py  DataStream.py  __init__.py  config.py  constants.py
ssi/trading/: __init__.py
